--- a/scss/_drupal-bootstrap.scss
+++ b/scss/_drupal-bootstrap.scss
@@ -109,6 +109,7 @@ a {
 
 ol,
 ul {
+	display: table;
 	padding-left: 1.5em;
 	.popover &:last-child {
 		margin-bottom: 0;
